--- a/learn/index.html
+++ b/learn/index.html
@@ -89,7 +89,7 @@
     <input type="text" class="form-control" id="inputCity">
   </div>
   <div class="col-md-4">
-    <label for="inputState" class="form-label">province</label>
+    <label for="inputState" class="form-label">location</label>
     <select id="inputState" class="form-select">
       <option selected>default</option>
       <option>east borneo</option>
@@ -143,6 +143,9 @@
 </form>
     <h6>if your done, click proceed</h6>
     <a class="btn btn-outline-success" href="#" role="button">proceed</a>
+    <div class="p-3 mb-2 bg-dark text-white">made with github</div>
+    <div class="p-3 mb-2 bg-dark text-white">deployed with netlify</div>
+    <div class="p-3 mb-2 bg-dark text-white">code reference from bootstrap</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
