--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -55,6 +55,8 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
+    <h1 class="display-6">Reccomendations</h1>
+    <h6>this is where you could learn</h6>
     <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card">
