--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -62,8 +62,8 @@
     <div class="card">
       <img src="netlify.png" class="card-img-top" alt="netlify">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">netlify</h5>
+        <p class="card-text">deploy.</p>
       </div>
     </div>
   </div>
@@ -71,8 +71,8 @@
     <div class="card">
       <img src="yggou.png" class="card-img-top" alt="yggou">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">scratch</h5>
+        <p class="card-text">code & compiler</p>
       </div>
     </div>
   </div>
@@ -80,8 +80,8 @@
     <div class="card">
       <img src="html.png" class="card-img-top" alt="html">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">html</h5>
+        <p class="card-text">code</p>
       </div>
     </div>
   </div>
@@ -89,11 +89,60 @@
     <div class="card">
       <img src="github.png" class="card-img-top" alt="github">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">github</h5>
+        <p class="card-text">code compiler</p>
       </div>
     </div>
   </div>
+</div>
+    <div class="p-3 mb-2 bg-info-subtle text-emphasis-info"></div>
+    <h1 class="display-1">News News!</h1>
+    <div class="alert alert-success" role="alert">
+      24 august 2023
+      alkiva117 added home page and navbar-1
+</div>
+    <div class="alert alert-success" role="alert">
+  26 august 2023
+  finished home page
+</div>
+    <div class="alert alert-success" role="alert">
+  27 august 2023
+      added sign in and <code>form_href="#"</code>
+</div>
+    <div class="alert alert-success" role="alert">
+      30 august 2023
+      learnpage code <code><nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://kelaskaryabersama.netlify.app/">kelaskaryabersama</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="https://kelaskaryabersama.netlify.app/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Learn</a>
+        </li>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Warning!</strong> this site is in construction.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+    <h1 class="display-1">welcome to learn</h1>
+    <h6>this is where you could learn coding with languages such as word blocks, <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>, and others.</h6>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>Hello! 👋</strong> nice to meet you! welcome to your new learning webpage.🤖🐱
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div></code> 
+    xD
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
