--- a/learn/html/index.html
+++ b/learn/html/index.html
@@ -40,10 +40,11 @@
 </div>
     <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
+    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage">home</a>
   </li>
+    <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" href="#">HTML</a>
+    <a class="nav-link active" aria-current="page" href="#">HTML</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Scratch</a>
@@ -55,46 +56,31 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
-    <h1 class="display-6">Reccomendations</h1>
-    <h6>this is where you could learn</h6>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="netlify.png" class="card-img-top" alt="netlify">
-      <div class="card-body">
-        <h5 class="card-title">netlify</h5>
-        <p class="card-text">deploy.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="yggou.png" class="card-img-top" alt="yggou">
-      <div class="card-body">
-        <h5 class="card-title">scratch</h5>
-        <p class="card-text">code & compiler</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="html.png" class="card-img-top" alt="html">
-      <div class="card-body">
-        <h5 class="card-title">html</h5>
-        <p class="card-text">code</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="github.png" class="card-img-top" alt="github">
-      <div class="card-body">
-        <h5 class="card-title">github</h5>
-        <p class="card-text">code compiler</p>
-      </div>
-    </div>
-  </div>
-</div>
+      <h1>HTML basics</h1>
+      <h6>this is the basics of your webpage.</h6>
+      <h6>number 1. configure</h6>
+      <h6>you have to add this code to to make your web working. your contents go between <code><body></code> and <code></body></code></h6>
+      <h6><code><!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  </body>
+</html></code></h6>
+      <h3>components</h3>
+      <h5>buttons</h5>
+      <h6>here is the code for responsive button behavior. your link goes after <code>href="#"</code></h6>
+      <h6><code><a class="btn btn-primary" href="#" role="button">Link</a></code></h6>
+      <h5>text</h5>
+      <h6>this comes the easiest part of coding.</h6>
+      <h6>text ranges from h1 to h6</h6>
+      <h6><code><h1>your text here</h1></code></h6>
     <div class="p-3 mb-2 bg-info-subtle text-emphasis-info"></div>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
@@ -141,6 +127,8 @@
     <div class="alert alert-success alert-dismissible fade show" role="alert">
   <strong>Hello! 👋</strong> nice to meet you! welcome to your new learning webpage.🤖🐱
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </code>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
