--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -80,6 +80,21 @@
 </span></span><span class="line"><span class="cl"><span class="p">&lt;</span><span class="nt">script</span> <span class="na">src</span><span class="o">=</span><span class="s">"https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"</span> <span class="na">integrity</span><span class="o">=</span><span class="s">"sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"</span> <span class="na">crossorigin</span><span class="o">=</span><span class="s">"anonymous"</span><span class="p">&gt;&lt;/</span><span class="nt">script</span><span class="p">&gt;</span>
 </span></span></code></pre></div></div></li>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
+      <h4>Buttons</h4>
+      <h6>here are the code for your responsive <code>Link_href="#"</code> button</h6>
+      <h6>put your link in <code>href="</code>here<code>"</code></h6>
+      <h6><code>&lt;a class="btn btn-primary" href="#" role="button"&gt;Link&lt;/a&gt;</code></h6>
+      <h4>text</h4>
+      <h6><code>&lt;h1&gt;your text here&lt;h1&gt;</code></h6>
+      <h6>html text ranges from</h6>
+      <h1>h1,</h1>
+      <h2>h2,</h2>
+      <h3>h3,</h3>
+      <h4>h4,</h4>
+      <h5>h5,</h5>
+      <h6>to...</h6>
+      <h6>h6</h6>
+    <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
