--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" aria-current="page" href="https://kelaskaryabersama.netlify.app/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Learn</a>
+          <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage/">Learn</a>
         </li>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
