--- a/learn/index.html
+++ b/learn/index.html
@@ -124,8 +124,8 @@
   <div class="col-12">
     <button type="submit" class="btn btn-primary" href="#" >Sign in</button>
   </div>
+    <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/learnpage" role="button">submit</a>
 </form>
-    <h6>if your done, click proceed</h6>
     <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/learnpage" role="button">proceed</a>
     <div class="p-3 mb-2 bg-dark text-white">made with github</div>
     <div class="p-3 mb-2 bg-dark text-white">deployed with netlify</div>
