--- a/dark/log-in/index.html
+++ b/dark/log-in/index.html
@@ -67,6 +67,9 @@
     OK
   </label>
 </div>
+    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%"></div>
+</div>
 <form class="row g-3">
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Email</label>
