--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -38,7 +38,7 @@
   <strong>Hello! 👋</strong> nice to meet you! welcome to your new learning webpage.🤖🐱
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs sticky-top bg-body-teritiary">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="#">Home</a>
   </li>
