--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -33,21 +33,39 @@
   <strong>Warning!</strong> this site is in construction.
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-<h4>slingshot <p><a class="link-opacity-100" href="https://scratch.mit.edu/projects/873095813/">on scratch</a></p></h4>
-<div class="ratio ratio-16x9">
-  <iframe src="https://scratch.mit.edu/projects/873095813/" title="Scratch project" allowfullscreen></iframe>
+    <div class="row">
+  <div class="col-4">
+    <div class="list-group" id="list-tab" role="tablist">
+      <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Diep</a>
+      <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Slither</a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Dashcraft</a>
+      <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Slingshot</a>
+    </div>
+  </div>
+  <div class="col-8">
+    <div class="tab-content" id="nav-tabContent">
+      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">    <h4>diep.io <p><a href="https://diep.io">on diep.io</a></p></h4>
+    <div class="ratio ratio-16x9">
+  <iframe src="https://diep.io" title=".io game" allowfullscreen></iframe>
 </div>
-    <h4>dashcraft.io <p><a href="https://crazygames.com/games/dashcraft.io">on crazygame</a></p></h4>
-<div class="ratio ratio-16x9">
-  <iframe src="https://crazygames.com/games/dashcraft.io" title=".io game" allowfullscreen></iframe>
 </div>
+      <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
     <h4>slither.io <p><a href="https://slither.io">on slither.io</a></p></h4>
     <div class="ratio ratio-16x9">
   <iframe src="https://slither.io" title=".io game" allowfullscreen></iframe>
-</div>
-    <h4>diep.io <p><a href="https://diep.io">on diep.io</a></p></h4>
-    <div class="ratio ratio-16x9">
-  <iframe src="https://diep.io" title=".io game" allowfullscreen></iframe>
+</div></div>
+      <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+    <h4>dashcraft.io <p><a href="https://crazygames.com/games/dashcraft.io">on crazygame</a></p></h4>
+<div class="ratio ratio-16x9">
+  <iframe src="https://crazygames.com/games/dashcraft.io" title=".io game" allowfullscreen></iframe>
+</div></div>
+      <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+<h4>slingshot <p><a class="link-opacity-100" href="https://scratch.mit.edu/projects/873095813/">on scratch</a></p></h4>
+<div class="ratio ratio-16x9">
+  <iframe src="https://scratch.mit.edu/projects/873095813/" title="Scratch project" allowfullscreen></iframe>
+</div></div>
+    </div>
+  </div>
 </div>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
