--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -39,7 +39,7 @@
       <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Diep</a>
       <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Slither</a>
       <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Dashcraft</a>
-      <a class="list-group-item list-group-item-action active" id="list-pucks-list" data-bs-toggle="list" href="#list-pucks" role="tab" aria-controls="list-pucks">Pucks</a>
+      <a class="list-group-item list-group-item-action" id="list-pucks-list" data-bs-toggle="list" href="#list-pucks" role="tab" aria-controls="list-pucks">Pucks</a>
       <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Slingshot</a>
     </div>
   </div>
@@ -71,10 +71,9 @@
 <div class="ratio ratio-16x9">
   <iframe src="https://crazygames.com/games/pucks.io" title=".io game" allowfullscreen></iframe>
 </div></div>
-
     </div>
   </div>
 </div>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
