--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -1,126 +1,35 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Chat | kelaskaryabersama</title>
-    <link rel="stylesheet" href="styles.css" />
-
-    <!-- Import this CDN to use icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-
   <body>
-    <!-- Main container -->
-    <div class="container">
-      <!-- msg-header section starts -->
-      <div class="msg-header">
-        <div class="container1">
-          <img src="user1.png" class="msgimg" />
-          <div class="active">
-            <p>User name</p>
-          </div>
-        </div>
-      </div>
-      <!-- msg-header section ends -->
-
-      <!-- Chat inbox  -->
-      <div class="chat-page">
-        <div class="msg-inbox">
-          <div class="chats">
-            <!-- Message container -->
-            <div class="msg-page">
-              <!-- Incoming messages -->
-
-              <div class="received-chats">
-                <div class="received-chats-img">
-                  <img src="http://118.98.228.52/media/Assets/foto/48b381d59_3008202316036.png" />
-                </div>
-                <div class="received-msg">
-                  <div class="received-msg-inbox">
-                    <p>
-                      Hi !! This is message from github . Lorem ipsum, dolor sit
-                      amet consectetur adipisicing elit. Non quas nemo eum,
-                      earum sunt, nobis similique quisquam eveniet pariatur
-                      commodi modi voluptatibus iusto omnis harum illum iste
-                      distinctio expedita illo!
-                    </p>
-                    <span class="time">18:06 PM | July 24</span>
-                  </div>
-                </div>
-              </div>
-              <!-- Outgoing messages -->
-              <div class="outgoing-chats">
-                <div class="outgoing-chats-img">
-                  <img src="user1.png" />
-                </div>
-                <div class="outgoing-msg">
-                  <div class="outgoing-chats-msg">
-                    <p class="multi-msg">
-                      Hi riya , Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Illo nobis deleniti earum magni
-                      recusandae assumenda.
-                    </p>
-                    <p class="multi-msg">
-                      Lorem ipsum dolor sit amet consectetur.
-                    </p>
-
-                    <span class="time">18:30 PM | July 24</span>
-                  </div>
-                </div>
-              </div>
-              <div class="received-chats">
-                <div class="received-chats-img">
-                  <img src="http://118.98.228.52/media/Assets/foto/48b381d59_3008202316036.png" />
-                </div>
-                <div class="received-msg">
-                  <div class="received-msg-inbox">
-                    <p class="single-msg">
-                      Hi !! This is message from github. Lorem ipsum, dolor
-                      sit amet consectetur adipisicing elit. iste distinctio
-                      expedita illo!
-                    </p>
-                    <span class="time">18:31 PM | July 24</span>
-                  </div>
-                </div>
-              </div>
-              <div class="outgoing-chats">
-                <div class="outgoing-chats-img">
-                  <img src="user1.png" />
-                </div>
-                <div class="outgoing-msg">
-                  <div class="outgoing-chats-msg">
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Velit, sequi.
-                    </p>
-
-                    <span class="time">18:34 PM | July 24</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- msg-bottom section -->
-
-          <div class="msg-bottom">
-            <div class="input-group">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Write message..."
-              />
-
-              <span class="input-group-text send-icon">
-                <i class="bi bi-send"></i>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+  <div class="container-md">
+    <p><a href="kelaskaryabersama.netlify.app/learnpage">&lt; Back</a></p>
+    <a class="navbar-brand" href="#">cloud chat</a>
+  </div>
+</nav>
+    <div class="card">
+  <div class="card-body">
+    Hi! welcome to cloud chat. this is where you could chat with your clasmate
+<div class="card-footer text-body-secondary">
+    automatic message by <code>github</code> system
+  </div>
+</div>
+    <nav class="navbar sticky-bottom bg-body-tertiary">
+  <div class="container-fluid">
+    <form class="d-flex" role="search">
+      <input class="form-control" type="text" placeholder="type message here..." aria-label="default input example">
+      <button class="btn btn-outline-success" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#008000" class="bi bi-send" viewBox="0 0 16 16">
+  <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
+</svg></button>
+    </form>
+  </div>
+</nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
-
-
